--- a/contact-page/Contact_page.html
+++ b/contact-page/Contact_page.html
@@ -18,7 +18,7 @@
     <br><br>
     <input type="email" placeholder="Email">
     <br><br>
-    <input type="number" placeholder="Phone number">
+    <input type="number" placeholder="Phone Number">
     <br><br>
     <button>Submit</button>
   </form>
