--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -17,7 +17,7 @@
           <li><img src="images/logo.jpg" alt="logo" class="image"></li>
           <li><p id="my-name">Benita Ekene-Okikere <br> Backend Developer</p></li>
           <li>Linkedin</li>
-          <li>Github</li>
+          <li href="https://github.com/benita-ekene?tab=repositories>Github"</li>
           <li>About</li>
           <li>Contact</li>
           <li class="projects">View Projects</li>
