--- a/portfolio-site/index.html
+++ b/portfolio-site/index.html
@@ -16,11 +16,11 @@
         <Ul class="nav-bar">
           <li><img src="images/logo.jpg" alt="logo" class="image"></li>
           <li><p id="my-name">Benita Ekene-Okikere <br> Backend Developer</p></li>
-          <li>Linkedin</li>
-          <li href="https://github.com/benita-ekene?tab=repositories>Github"</li>
+          <a href="https://www.linkedin.com/in/benita-ekene-okikere-2181a6252/"></<li>Linkedin</li></a>
+         <a href="https://github.com/benita-ekene?tab=repositories>Github"><li>Github</li></a>
           <li>About</li>
           <li>Contact</li>
-          <li class="projects">View Projects</li>
+          <a href="https://github.com/benita-ekene?tab=repositories>Github"><li class="projects">View Projects</li></a>
         </Ul>
       </a>
     </section>
